--- a/sale.html
+++ b/sale.html
@@ -503,6 +503,7 @@ body.dark .card-text.small {
    <script src="config.js"></script>
 
   <script>
+    const API_BASE = 'window.API_BASE';
     const {
       createApp
     } = Vue;
