--- a/sale.html
+++ b/sale.html
@@ -519,7 +519,7 @@
           <tbody>
             <tr v-for="(order, index) in paginatedOrders" :key="index" class="border-t dark:border-gray-700">
               <td class="px-4 py-2">{{ order.orderCode }}</td>
-              <td class="px-4 py-2">{{ order.customer.name }}</td>
+              <td class="px-4 py-2">{{ order.customer?.name || order.customer || 'N/A' }}</td>
               <td class="px-4 py-2">₦{{ order.total }}</td>
               <td class="px-4 py-2">{{ order.status }}</td>
               <td class="px-4 py-2">{{ order.createdAt }}</td>
